--- a/index.html
+++ b/index.html
@@ -1,92 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Shreya M | Resume</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Shreya M | Resume</title>
+
+<style>
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  background-color: #f5f6fa;
+}
+
+/* Header */
+.header {
+  text-align: center;
+  padding: 30px;
+  background: #6c5ce7;
+  color: white;
+}
+
+/* Layout */
+.main {
+  display: flex;
+  width: 90%;
+  margin: 30px auto;
+}
+
+/* Sidebar */
+.sidebar {
+  width: 25%;
+}
+
+.sidebar button {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  border: none;
+  background: #dfe6e9;
+  font-size: 16px;
+}
+
+.sidebar button:hover {
+  background: #b2bec3;
+}
+
+/* Content */
+.content {
+  width: 75%;
+  padding: 20px;
+  background: white;
+}
+
+/* Sections */
+.section {
+  display: none;
+}
+
+.section.active {
+  display: block;
+}
+
+/* Line-by-line list */
+.line-list {
+  padding-left: 20px;
+}
+
+.line-list li {
+  display: block;
+  margin-bottom: 8px;
+  font-size: 16px;
+}
+
+/* Footer */
+footer {
+  text-align: center;
+  padding: 15px;
+  margin-top: 30px;
+  font-size: 14px;
+}
+</style>
 </head>
+
 <body>
 
-  <!-- Header -->
-  <header class="header">
-    <h1>Shreya M</h1>
-    <p>Aspiring Software Developer | BCA Student</p>
-  </header>
+<!-- Header -->
+<div class="header">
+  <h1>Shreya M</h1>
+  <p>Aspiring Software Developer | BCA Student</p>
+</div>
 
-  <!-- Main Layout -->
-  <div class="main">
+<!-- Main -->
+<div class="main">
 
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <button onclick="showSection('skills')">Skills</button>
-      <button onclick="showSection('education')">Education</button>
-      <button onclick="showSection('internship')">Internship</button>
-      <button onclick="showSection('projects')">Projects</button>
-      <button onclick="showSection('certifications')">Certifications</button>
-    </div>
-
-    <!-- Content -->
-    <div class="content">
-
-      <div id="skills" class="section active">
-        <h2>Skills</h2>
-        <ul class="line-list">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Python</li>
-          <li>AWS</li>
-          <li>Bootstrap</li>
-        </ul>
-      </div>
-
-      <div id="education" class="section">
-        <h2>Education</h2>
-        <ul class="line-list">
-          <li>BCA – 5th Semester</li>
-          <li>NEP (2023–2026)</li>
-        </ul>
-      </div>
-
-      <div id="internship" class="section">
-        <h2>Internship</h2>
-        <ul class="line-list">
-          <li>IMTDA Infotech Private Limited</li>
-          <li>Web Development Intern</li>
-        </ul>
-      </div>
-
-      <div id="projects" class="section">
-        <h2>Projects</h2>
-        <ul class="line-list">
-          <li>Resume Webpage</li>
-          <li>Welcome Page using JavaScript</li>
-        </ul>
-      </div>
-
-      <div id="certifications" class="section">
-        <h2>Certifications</h2>
-        <ul class="line-list">
-          <li>AWS Cloud Basics</li>
-        </ul>
-      </div>
-
-    </div>
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <button onclick="showSection('skills')">Skills</button>
+    <button onclick="showSection('education')">Education</button>
+    <button onclick="showSection('internship')">Internship</button>
+    <button onclick="showSection('projects')">Projects</button>
+    <button onclick="showSection('certifications')">Certifications</button>
   </div>
 
-  <!-- Footer -->
-  <footer>
-    Company: IMTDA Infotech Private Limited
-  </footer>
+  <!-- Content -->
+  <div class="content">
 
-  <!-- JavaScript -->
-  <script>
-    function showSection(id) {
-      const sections = document.querySelectorAll('.section');
-      sections.forEach(section => section.classList.remove('active'));
-      document.getElementById(id).classList.add('active');
-    }
-  </script>
+    <div id="skills" class="section active">
+      <h2>Skills</h2>
+      <ul class="line-list">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Python</li>
+        <li>AWS</li>
+        <li>Bootstrap</li>
+      </ul>
+    </div>
+
+    <div id="education" class="section">
+      <h2>Education</h2>
+      <ul class="line-list">
+        <li>BCA – 5th Semester</li>
+        <li>NEP (2023–2026)</li>
+      </ul>
+    </div>
+
+    <div id="internship" class="section">
+      <h2>Internship</h2>
+      <ul class="line-list">
+        <li>IMTDA Infotech Private Limited</li>
+        <li>Web Development Intern</li>
+      </ul>
+    </div>
+
+    <div id="projects" class="section">
+      <h2>Projects</h2>
+      <ul class="line-list">
+        <li>Resume Webpage</li>
+        <li>Welcome Page using JavaScript</li>
+      </ul>
+    </div>
+
+    <div id="certifications" class="section">
+      <h2>Certifications</h2>
+      <ul class="line-list">
+        <li>AWS Cloud Basics</li>
+      </ul>
+    </div>
+
+  </div>
+</div>
+
+<!-- Footer -->
+<footer>
+  Company: IMTDA Infotech Private Limited
+</footer>
+
+<script>
+function showSection(id) {
+  const sections = document.querySelectorAll('.section');
+  sections.forEach(section => section.classList.remove('active'));
+  document.getElementById(id).classList.add('active');
+}
+</script>
 
 </body>
 </html>
+
