--- a/index.html
+++ b/index.html
@@ -2,98 +2,88 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Shreya M | Professional Resume</title>
+<title>Shreya M | Resume</title>
 
 <style>
-:root{
-  --primary:#4f6ef7;
-  --accent:#ff6fae;
-  --bg:#f4f7ff;
-  --dark:#1f2937;
-  --light:#ffffff;
-}
-
-*{
-  box-sizing:border-box;
-  margin:0;
-  padding:0;
-}
-
 body{
-  font-family:'Segoe UI', Arial, sans-serif;
-  background:linear-gradient(135deg,#eef2ff,#fdf0f7);
-  color:var(--dark);
+  margin:0;
+  font-family: "Segoe UI", Arial, sans-serif;
+  background:#f3f4ff;
 }
 
 /* HEADER */
 .header{
+  padding:60px 20px;
   text-align:center;
-  padding:50px 20px;
-  background:linear-gradient(135deg,var(--primary),var(--accent));
+  background:linear-gradient(90deg,#f76da4,#7a5af8);
   color:white;
 }
 
 .header h1{
-  font-size:36px;
+  margin:0;
+  font-size:34px;
 }
 
 .header p{
-  margin-top:10px;
-  font-size:16px;
+  margin-top:12px;
+  font-size:15px;
   opacity:0.95;
 }
 
-/* MAIN CONTAINER */
+/* MAIN CARD */
 .main{
-  width:90%;
-  margin:40px auto;
+  width:85%;
+  margin:-40px auto 40px;
+  background:white;
+  border-radius:18px;
   display:flex;
-  background:var(--light);
-  border-radius:16px;
-  box-shadow:0 20px 45px rgba(0,0,0,0.12);
-  overflow:hidden;
+  box-shadow:0 15px 35px rgba(0,0,0,0.12);
+  padding:30px;
 }
 
 /* SIDEBAR */
 .sidebar{
   width:28%;
-  background:#f8f9ff;
-  padding:25px;
+  background:#fafaff;
+  border-radius:14px;
+  padding:20px;
+}
+
+.sidebar h3{
+  margin-top:0;
+  color:#ff6fae;
 }
 
 .sidebar button{
   width:100%;
-  padding:14px;
-  margin-bottom:14px;
+  padding:12px;
+  margin-bottom:12px;
   border:none;
   border-radius:10px;
-  background:var(--light);
-  font-size:15px;
+  background:white;
   cursor:pointer;
+  font-size:15px;
+  text-align:left;
   transition:0.3s;
 }
 
 .sidebar button:hover{
-  background:var(--primary);
-  color:white;
-  transform:translateX(6px);
+  background:#ececff;
 }
 
 .sidebar button.active{
-  background:var(--primary);
+  background:#ff6fae;
   color:white;
 }
 
 /* CONTENT */
 .content{
   width:72%;
-  padding:35px;
+  padding:10px 30px;
 }
 
-/* SECTIONS */
 .section{
   display:none;
-  animation:fadeUp 0.4s ease;
 }
 
 .section.active{
@@ -101,41 +91,43 @@ body{
 }
 
 .section h2{
-  color:var(--primary);
-  border-bottom:2px solid #e5e7eb;
-  padding-bottom:8px;
-  margin-bottom:20px;
+  margin-top:0;
+  color:#ff6fae;
+  border-bottom:2px solid #ffe1ee;
+  padding-bottom:6px;
 }
 
-/* LINE BY LINE LIST */
+/* SKILL CHIPS */
+.skills{
+  margin-top:20px;
+}
+
+.skill-chip{
+  display:inline-block;
+  background:#7a5af8;
+  color:white;
+  padding:6px 14px;
+  border-radius:20px;
+  margin:6px 6px 0 0;
+  font-size:14px;
+}
+
+/* LINE LIST */
 .line-list{
-  padding-left:20px;
+  padding-left:18px;
+  margin-top:15px;
 }
 
 .line-list li{
-  display:block;
-  margin-bottom:10px;
-  font-size:16px;
+  margin-bottom:8px;
 }
 
 /* FOOTER */
 footer{
   text-align:center;
-  padding:20px;
   font-size:14px;
-  color:#555;
-}
-
-/* ANIMATION */
-@keyframes fadeUp{
-  from{
-    opacity:0;
-    transform:translateY(15px);
-  }
-  to{
-    opacity:1;
-    transform:translateY(0);
-  }
+  color:#ff6fae;
+  margin-bottom:20px;
 }
 </style>
 </head>
@@ -145,7 +137,7 @@ footer{
 <!-- HEADER -->
 <div class="header">
   <h1>Shreya M</h1>
-  <p>BCA Student | Aspiring Software Developer</p>
+  <p>Aspiring Software Developer | BCA Student | Passionate About Web Development & Cloud Computing</p>
 </div>
 
 <!-- MAIN -->
@@ -153,6 +145,7 @@ footer{
 
   <!-- SIDEBAR -->
   <div class="sidebar">
+    <h3>Sections</h3>
     <button class="active" onclick="showSection('skills',this)">Skills</button>
     <button onclick="showSection('education',this)">Education</button>
     <button onclick="showSection('internship',this)">Internship</button>
@@ -165,14 +158,14 @@ footer{
 
     <div id="skills" class="section active">
       <h2>Skills</h2>
-      <ul class="line-list">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Python</li>
-        <li>AWS</li>
-        <li>Bootstrap</li>
-      </ul>
+      <div class="skills">
+        <span class="skill-chip">HTML</span>
+        <span class="skill-chip">CSS</span>
+        <span class="skill-chip">JavaScript</span>
+        <span class="skill-chip">Python</span>
+        <span class="skill-chip">AWS</span>
+        <span class="skill-chip">Bootstrap</span>
+      </div>
     </div>
 
     <div id="education" class="section">
@@ -194,8 +187,8 @@ footer{
     <div id="projects" class="section">
       <h2>Projects</h2>
       <ul class="line-list">
-        <li>Professional Resume Webpage</li>
-        <li>Interactive Welcome Page</li>
+        <li>Resume Webpage using HTML, CSS & JavaScript</li>
+        <li>GitHub Pages Welcome Page</li>
       </ul>
     </div>
 
@@ -216,14 +209,10 @@ footer{
 
 <script>
 function showSection(id,btn){
-  document.querySelectorAll('.section').forEach(sec=>{
-    sec.classList.remove('active');
-  });
+  document.querySelectorAll('.section').forEach(s=>s.classList.remove('active'));
   document.getElementById(id).classList.add('active');
 
-  document.querySelectorAll('.sidebar button').forEach(b=>{
-    b.classList.remove('active');
-  });
+  document.querySelectorAll('.sidebar button').forEach(b=>b.classList.remove('active'));
   btn.classList.add('active');
 }
 </script>
